--- a/pricelist.html
+++ b/pricelist.html
@@ -9,7 +9,6 @@
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <link rel="icon" href="data:,">
 </head>
-<body>
   <!-- Header cu buton Înapoi + Logo centrat -->
   <header class="bg-white shadow-sm border-b border-gray-200">
     <div class="max-w-6xl mx-auto px-6 py-4 flex items-center justify-between">
@@ -25,14 +24,14 @@
 
       <!-- Logo centrat (clickabil) -->
       <a href="../credit/" class="absolute left-1/2 transform -translate-x-1/2">
-        <img src="../logos/logo.svg" alt="MOTOLAND" class="h-10">
+        <img src="logos/logo.svg" alt="MOTOLAND" class="h-10">
       </a>
 
       <!-- Spațiu gol dreapta pentru simetrie -->
       <div class="w-20"></div>
     </div>
   </header>
-
+<body>
     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8">
       <template x-for="brand in brands" :key="brand.name">
         <a :href="brand.link"
