--- a/pricelist.html
+++ b/pricelist.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ro" class="h-full bg-gray-50">
 <head>
@@ -9,49 +8,52 @@
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <link rel="icon" href="data:,">
 </head>
-  <!-- Header cu buton Înapoi + Logo centrat -->
-  <header class="bg-white shadow-sm border-b border-gray-200">
-    <div class="max-w-6xl mx-auto px-6 py-4 flex items-center justify-between">
-      <!-- Buton Înapoi -->
-      <a href="../credit/" 
-         class="flex items-center gap-3 text-gray-700 hover:text-gray-900 font-medium transition">
+<body class="min-h-screen flex flex-col">
+
+  <!-- HEADER cu buton Înapoi + Logo centrat -->
+  <header class="bg-white shadow-sm border-b border-gray-200 z-10">
+    <div class="max-w-6xl mx-auto px-6 py-4 flex items-center justify-between relative">
+      <a href="../credit/" class="flex items-center gap-3 text-gray-700 hover:text-gray-900 font-medium">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
-                d="M10 19l-7-7m0 0l7-7m-7 7h18"/>
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/>
         </svg>
         <span>Înapoi</span>
       </a>
 
-      <!-- Logo centrat (clickabil) -->
       <a href="../credit/" class="absolute left-1/2 transform -translate-x-1/2">
-        <img src="logos/logo.svg" alt="MOTOLAND" class="h-10">
+        <img src="../logos/logo.svg" alt="MOTOLAND" class="h-10">
       </a>
 
-      <!-- Spațiu gol dreapta pentru simetrie -->
       <div class="w-20"></div>
     </div>
   </header>
-<body>
-    <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8">
-      <template x-for="brand in brands" :key="brand.name">
-        <a :href="brand.link"
-           class="group block transform hover:scale-105 transition-all duration-300">
-          <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl p-8 flex flex-col items-center justify-center h-48 border border-gray-100">
-            <img :src="brand.logo" 
-                 :alt="brand.name + ' logo'"
-                 class="max-h-24 max-w-full object-contain mb-4 grayscale group-hover:grayscale-0 transition-all">
-            <span class="text-lg font-semibold text-gray-700 group-hover:text-gray-900">
-              <span x-text="brand.name"></span> →
-            </span>
-          </div>
-        </a>
-      </template>
-    </div>
 
-    <p class="text-center text-gray-500 mt-12 text-sm">
-      Click pe logo-ul brandului pentru a continua
-    </p>
-  </div>
+  <!-- CONȚINUT PRINCIPAL -->
+  <main class="flex-1 flex items-center justify-center p-6">
+    <div class="max-w-6xl w-full" x-data="app()">
+
+      <!-- Grid-ul de branduri perfect centrat -->
+      <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8 justify-items-center">
+        <template x-for="brand in brands" :key="brand.name">
+          <a :href="brand.link" target="_blank"
+             class="group block transform hover:scale-105 transition-all duration-300">
+            <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl p-8 flex flex-col items-center justify-center h-48 border border-gray-100">
+              <img :src="brand.logo"
+                   :alt="brand.name"
+                   class="max-h-24 max-w-full object-contain mb-4 grayscale group-hover:grayscale-0 transition-all">
+              <span class="text-lg font-semibold text-gray-700 group-hover:text-gray-900">
+                <span x-text="brand.name"></span> →
+              </span>
+            </div>
+          </a>
+        </template>
+      </div>
+
+      <p class="text-center text-gray-500 mt-12 text-sm">
+        Click pe logo-ul brandului pentru a continua
+      </p>
+    </div>
+  </main>
 
   <script>
     function app() {
@@ -59,13 +61,13 @@
         brands: [],
         async init() {
           try {
-            const res = await fetch('pricelist.json');
+            // Calea corectă când ești în /credit/price.html
+            const res = await fetch('../pricelist.json?t=' + Date.now());
             this.brands = await res.json();
           } catch (e) {
-            // fallback static dacă nu încarcă greșit
+            console.error('Eroare încărcare pricelist.json:', e);
             this.brands = [
-              { name: "Nike", link: "https://nike.com/ro", logo: "assets/logos/nike.svg" },
-              { name: "Adidas", link: "https://adidas.ro", logo: "assets/logos/adidas.svg" }
+              { name: "Test", link: "#", logo: "../logos/logo.svg" }
             ];
           }
         }
