--- a/pricelist.html
+++ b/pricelist.html
@@ -25,7 +25,7 @@
 
       <!-- Logo centrat (clickabil) -->
       <a href="../credit/" class="absolute left-1/2 transform -translate-x-1/2">
-        <img src="../logos/logo.svg" alt="MOTOLAND" class="h-10">
+        <img src="logos/logo.svg" alt="MOTOLAND" class="h-10">
       </a>
 
       <!-- Spațiu gol dreapta pentru simetrie -->
