--- a/pricelist.html
+++ b/pricelist.html
@@ -44,7 +44,7 @@
       </template>
     </div>
     <p class="text-center text-gray-500 mt-12 text-sm">
-      Click pe logo-ul brandului pentru a continua
+      Alege categoria pentru a continua
     </p>
   </div>
   <script>
