--- a/price.html
+++ b/price.html
@@ -9,7 +9,17 @@
   <link rel="icon" href="data:,">
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col">
-
+ <!-- BUTON ÎNAPOI – lipește-l CHIAR DUPĂ <body ...> -->
+<div class="fixed top-4 left-4 z-50">
+  <a href="../credit/" 
+     class="flex items-center gap-2 bg-white hover:bg-gray-100 text-gray-700 font-medium px-4 py-3 rounded-xl shadow-lg hover:shadow-xl transition-all duration-200 border border-gray-200">
+    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
+    </svg>
+    <span class="hidden sm:inline">Înapoi</span>
+  </a>
+</div>
+<!-- SFÂRȘIT BUTON ÎNAPOI -->
   <header class="bg-white shadow-sm border-b py-5 text-center">
     <img src="logos/logo.svg" alt="MOTOLAND" class="h-10 mx-auto">
   </header>
