--- a/fiches.html
+++ b/fiches.html
@@ -9,6 +9,17 @@
   <link rel="icon" href="data:,">
 </head>
 <body class="min-h-screen flex items-center justify-center p-6">
+   <!-- BUTON ÎNAPOI – lipește-l CHIAR DUPĂ <body ...> -->
+<div class="fixed top-4 left-4 z-50">
+  <a href="../credit/" 
+     class="flex items-center gap-2 bg-white hover:bg-gray-100 text-gray-700 font-medium px-4 py-3 rounded-xl shadow-lg hover:shadow-xl transition-all duration-200 border border-gray-200">
+    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
+    </svg>
+    <span class="hidden sm:inline">Înapoi</span>
+  </a>
+</div>
+<!-- SFÂRȘIT BUTON ÎNAPOI -->
   <div class="max-w-4xl w-full" x-data="app()">
     <h1 class="text-4xl font-bold text-center mb-12 text-gray-800 text-center">
       Alege brandul dorit
