--- a/credit.html
+++ b/credit.html
@@ -34,6 +34,17 @@
     </style>
 </head>
 <body>
+     <!-- BUTON ÎNAPOI – lipește-l CHIAR DUPĂ <body ...> -->
+<div class="fixed top-4 left-4 z-50">
+  <a href="../credit/" 
+     class="flex items-center gap-2 bg-white hover:bg-gray-100 text-gray-700 font-medium px-4 py-3 rounded-xl shadow-lg hover:shadow-xl transition-all duration-200 border border-gray-200">
+    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
+    </svg>
+    <span class="hidden sm:inline">Înapoi</span>
+  </a>
+</div>
+<!-- SFÂRȘIT BUTON ÎNAPOI -->
     <div class="calculator">
         <h1>Calculator Rate Credit</h1>
        
