--- a/credit.html
+++ b/credit.html
@@ -34,17 +34,16 @@
     </style>
 </head>
 <body>
- <!-- BUTON ÎNAPOI – lipește-l CHIAR DUPĂ <body> -->
+ <!-- BUTON ÎNAPOI – ultra minimalist (recomandat 100%) -->
 <div class="fixed top-6 left-6 z-50">
   <a href="../credit/" 
-     class="flex items-center gap-2.5 bg-white/90 backdrop-blur-sm hover:bg-white text-gray-800 font-semibold px-5 py-3.5 rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 border border-gray-300">
-    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M15 19l-7-7 7-7"/>
+     class="flex items-center justify-center w-12 h-12 bg-white/70 backdrop-blur-md hover:bg-white text-gray-700 hover:text-gray-900 rounded-full shadow-lg hover:shadow-xl transition-all duration-300 border border-gray-300">
+    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
     </svg>
-    <span class="hidden sm:inline text-base">Înapoi</span>
   </a>
 </div>
-<!-- SFÂRȘIT BUTON ÎNAPOI -->
+<!-- SFÂRȘIT BUTON -->
     <div class="calculator">
         <h1>Calculator Rate Credit</h1>
        
