--- a/credit.html
+++ b/credit.html
@@ -34,13 +34,14 @@
     </style>
 </head>
 <body>
- <!-- BUTON ÎNAPOI – ultra minimalist (recomandat 100%) -->
-<div class="fixed top-6 left-6 z-50">
+ <!-- BUTON ÎNAPOI – normal, curat, perfect pentru pagina ta -->
+<div class="fixed top-8 left-8 z-50">
   <a href="../credit/" 
-     class="flex items-center justify-center w-12 h-12 bg-white/70 backdrop-blur-md hover:bg-white text-gray-700 hover:text-gray-900 rounded-full shadow-lg hover:shadow-xl transition-all duration-300 border border-gray-300">
-    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
+     class="inline-flex items-center gap-3 bg-white hover:bg-gray-50 text-gray-800 font-semibold px-6 py-3.5 rounded-xl shadow-lg hover:shadow-xl transition-all duration-200 border border-gray-300">
+    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M15 19l-7-7 7-7"/>
     </svg>
+    <span>Înapoi</span>
   </a>
 </div>
 <!-- SFÂRȘIT BUTON -->
