--- a/credit.html
+++ b/credit.html
@@ -34,17 +34,16 @@
     </style>
 </head>
 <body>
- <!-- BUTON ÎNAPOI – normal, curat, perfect pentru pagina ta -->
-<div class="fixed top-8 left-8 z-50">
+<!-- BUTON ÎNAPOI – corect, mic, discret, săgeată normală (spre stânga) -->
+<div class="fixed top-6 left-6 z-50">
   <a href="../credit/" 
-     class="inline-flex items-center gap-3 bg-white hover:bg-gray-50 text-gray-800 font-semibold px-6 py-3.5 rounded-xl shadow-lg hover:shadow-xl transition-all duration-200 border border-gray-300">
+     class="flex items-center justify-center w-10 h-10 bg-white hover:bg-gray-100 text-gray-700 hover:text-gray-900 rounded-full shadow-md hover:shadow-lg transition-all duration-200 border border-gray-300">
     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M15 19l-7-7 7-7"/>
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M10 19l-7-7m0 0l7-7m-7 7h18"/>
     </svg>
-    <span>Înapoi</span>
   </a>
 </div>
-<!-- SFÂRȘIT BUTON -->
+<!-- GATA -->
     <div class="calculator">
         <h1>Calculator Rate Credit</h1>
        
