--- a/credit.html
+++ b/credit.html
@@ -34,6 +34,21 @@
     </style>
 </head>
 <body>
+ <button onclick="window.history.back()" 
+        style="
+            background:#27ae60;
+            color:white;
+            padding:12px 25px;
+            border:none;
+            border-radius:8px;
+            font-size:16px;
+            cursor:pointer;
+            font-weight:bold;
+            margin-bottom:20px;
+            box-shadow:0 4px 10px rgba(0,0,0,0.15);
+        ">
+        ⬅ Înapoi
+    </button>
     <div class="calculator">
         <h1>Calculator Rate Credit</h1>
        
