--- a/catalog.html
+++ b/catalog.html
@@ -43,9 +43,9 @@
 
         <div x-show="open === 'canam'" x-transition class="px-6 pb-8">
           <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6">
-            <a href="https://www.brp.com/content/dam/brp-sites/Canada/2025f/5f3/2026-canam-on-road-2w-my2026-en.pdf" target="_blank" class="group">
+            <a href="https://euronautica.ro/uploads/catalog/doc/can-am-on-road-2wv.pdf" target="_blank" class="group">
               <div class="bg-white rounded-xl overflow-hidden shadow hover:shadow-xl transition">
-                <img src="cataloage/preview/canam-2w.jpg" class="w-full aspect-[3/4] object-cover group-hover:scale-105 transition">
+                <img src="cataloage/preview/onroad2ww.jpg" class="w-full aspect-[3/4] object-cover group-hover:scale-105 transition">
                 <div class="p-4 text-center">
                   <p class="font-medium text-gray-800">On-Road 2W</p>
                   <p class="text-2xl font-bold text-orange-600">2026</p>
@@ -53,9 +53,9 @@
               </div>
             </a>
 
-            <a href="https://www.brp.com/content/dam/brp-sites/Canada/2025f/5f3/2026-canam-on-road-3w-my2026-en.pdf" target="_blank" class="group">
+            <a href="https://euronautica.ro/uploads/catalog/doc/can-am-on-road-3wv-my-2026.pdf" target="_blank" class="group">
               <div class="bg-white rounded-xl overflow-hidden shadow hover:shadow-xl transition">
-                <img src="cataloage/preview/canam-3w.jpg" class="w-full aspect-[3/4] object-cover group-hover:scale-105 transition">
+                <img src="cataloage/preview/onroad3ww.jpg" class="w-full aspect-[3/4] object-cover group-hover:scale-105 transition">
                 <div class="p-4 text-center">
                   <p class="font-medium text-gray-800">On-Road 3W</p>
                   <p class="text-2xl font-bold text-orange-600">2026</p>
@@ -63,9 +63,27 @@
               </div>
             </a>
 
-            <a href="https://epc.brp.com" target="_blank" class="group">
+            <a href="https://euronautica.ro/uploads/catalog/doc/atv-2026-catalog-produse-accesorii-piese.pdf" target="_blank" class="group">
               <div class="bg-white rounded-xl overflow-hidden shadow hover:shadow-xl transition">
-                <img src="cataloage/preview/canam-atv.jpg" class="w-full aspect-[3/4] object-cover group-hover:scale-105 transition">
+                <img src="cataloage/preview/atv.jpg" class="w-full aspect-[3/4] object-cover group-hover:scale-105 transition">
+                <div class="p-4 text-center">
+                  <p class="font-medium text-gray-800">ATV / SSV</p>
+                  <p class="text-2xl font-bold text-orange-600">EPC Online</p>
+                </div>
+              </div>
+            </a>
+            <a href="https://euronautica.ro/uploads/catalog/doc/ssv-my-2026-catalog-produse-accesorii-piese.pdf" target="_blank" class="group">
+              <div class="bg-white rounded-xl overflow-hidden shadow hover:shadow-xl transition">
+                <img src="cataloage/preview/ssv.jpg" class="w-full aspect-[3/4] object-cover group-hover:scale-105 transition">
+                <div class="p-4 text-center">
+                  <p class="font-medium text-gray-800">ATV / SSV</p>
+                  <p class="text-2xl font-bold text-orange-600">EPC Online</p>
+                </div>
+              </div>
+            </a>
+                 <a href="https://euronautica.ro/uploads/catalog/doc/accesorii-sea-doo-2026.pdf" target="_blank" class="group">
+              <div class="bg-white rounded-xl overflow-hidden shadow hover:shadow-xl transition">
+                <img src="cataloage/preview/seadoo26.jpg" class="w-full aspect-[3/4] object-cover group-hover:scale-105 transition">
                 <div class="p-4 text-center">
                   <p class="font-medium text-gray-800">ATV / SSV</p>
                   <p class="text-2xl font-bold text-orange-600">EPC Online</p>
